--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js based RNode REPL interface.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+		"repl": "node ./index.js"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,10 @@
   },
   "homepage": "https://github.com/rchain-community/repl#readme",
   "dependencies": {
-    "@grpc/proto-loader": "^0.3.0",
+    "@grpc/proto-loader": "^0.7.5",
     "grpc": "^1.15.1"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "^10.2.0"
   }
 }
